--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 	"type": "module",
 	"dependencies": {
 		"chart.js": "^4.4.7",
+		"chartjs-adapter-moment": "^1.0.1",
+		"moment": "^2.30.1",
 		"svelte-chartjs": "^3.1.5"
 	}
 }
