--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"chart.js": "^4.4.7",
 		"chartjs-adapter-moment": "^1.0.1",
+		"driver.js": "^1.3.5",
 		"moment": "^2.30.1",
 		"svelte-chartjs": "^3.1.5"
 	}
